<resources>
    <string name="app_name">My Finances</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_searchable">SearchableActivity</string>

    <!-- Search widget strings -->
    <string name="app_label">My Finances</string>
    <string name="search_hint">Search category...</string>

    <!-- General -->
    <string name="empty_list">(No items. Click Add to create new one)</string>
    <string name="comment_hint">Comment</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_new">Add</string>
    <string name="price">1000</string>

    <!-- Account master view -->
    <string name="account_name">New account</string>
    <string name="account_balance">0</string>

    <!-- Account details view -->
    <string name="account_name_hint">Account name</string>
    <string name="account_confirm_delete">Are you sure to delete the account?</string>

    <!-- Navigation drawer stuff -->
    <string-array name="drawer_array">
        <item>Accounts</item>
        <item>Categories</item>
        <item>Transactions</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Category master view -->
    <string name="category_name">New category</string>

    <!-- Category details view -->
    <string name="category_name_hint">Category name</string>
    <string name="category_confirm_delete">Are you sure to delete the category?</string>

    <!-- Currency -->
    <string name="select_currency">Select a currency</string>
    <string name="currency">Currency</string>

    <!-- Transaction details view -->
    <string name="transaction_confirm_delete">Are you sure to delete the transaction?</string>

    <!-- Transactions list view -->
    <string name="income_label">Доход</string>
    <string name="expense_label">Расход</string>

</resources>
