<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="5dp">

    <EditText
        android:id="@+id/et_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceMedium"
        android:hint="@string/account_name_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/btn_select_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_currency"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_account_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceMedium"
        android:hint="@string/comment_hint"/>

</LinearLayout>
