<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/transaction_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/category_name"
        android:layout_alignParentLeft="true"
        android:padding="2dp"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/transaction_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/comment_hint"
        android:layout_below="@id/transaction_category_name"
        android:padding="2dp"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:id="@+id/transaction_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:padding="2dp"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearanceLarge" />

</RelativeLayout>